[package]
name = "lucid-client"
version = "0.2.0"
authors = ["Simone Romano <simoneromano@protonmail.ch>"]
edition = "2018"
license = "MIT OR Apache-2.0"
license_file = "./.licence/COPYRIGHT"
description = "LucidKV DB Client based on Reqwest"
homepage = "https://github.com/simoneromano96/lucid-client"
# documentation = ""
repository = "https://github.com/simoneromano96/lucid-client"
readme = "readme.md"
exclude = [
    ".docker/*",
    ".licence/*",
    ".github/*",
    "drone.yml",
    "readme.md",
    ".gitignore",
    "docker-compose.yml"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TypeSafe URLs
url = "2.1.1"
# For serializable traits
# TODO: see if I can only use the traits
serde = "1.0.110"

# HTTP Client to interact with LucidKV DB
[dependencies.reqwest]
version = "0.10.4"
features = ["rustls-tls", "json"]

[dev-dependencies]
# To serialize and deserialize
serde_derive = "1.0.110"
# For async fn tests
tokio = { version = "0.2.20", features = ["macros"] }

# Tests
[[test]]
name = "client"
path = "tests/client.rs"
